# frozen

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.rst  meson.build  xmake.lua
.github/workflows/: frozen.yml  linux.yml  osx.yml  windows.yml
benchmarks/: CMakeLists.txt  bench_int_set.cpp  bench_main.cpp  bench_str_map.cpp  bench_str_set.cpp
cmake/: detect_cxx_17.cmake  detect_cxx_version.cmake  sed.cmake
examples/: CMakeLists.txt  enum_to_string.cpp  enum_to_string_hash.cpp  html_entities_map.cpp  partial_memoization.cpp  pixel_art.cpp  static_assert.cpp  value_modification.cpp
include/frozen/: CMakeLists.txt  algorithm.h  array.h  map.h  random.h  set.h  string.h  unordered_map.h  unordered_set.h  vector.h
include/frozen/bits/: algorithms.h  basic_types.h  constexpr_assert.h  defines.h  elsa.h  elsa_std.h  exceptions.h  hash_string.h  mpl.h  multiply_shift.h  pic_array.h  pmh.h  prg.h  version.h
module/: frozen.cppm
tests/: CMakeLists.txt  Makefile  bench.hpp  no_exceptions.cpp  test_algorithms.cpp  test_array.cpp  test_elsa_std.cpp  test_map.cpp  test_rand.cpp  test_set.cpp  test_str.cpp  test_str_set.cpp  test_unordered_map.cpp  test_unordered_map_str.cpp  test_unordered_set.cpp  test_unordered_str_set.cpp  test_vector.cpp
